0.16
 - Update Module::Install to 1.21 version.
 - Update copyright years.

0.15 2020-08-19T18:07:59+02:00
 - Fix use lib in Makefile.PL.
 - Update author github username.
 - Update dependency to Map::Tube.

0.14 2020-08-19T18:00:32+02:00
 - Add EXAMPLE5 section to doc.
 - Add test for get_lines().
 - Fix encoding in Changes file.
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Implement station order.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Rewrite XML map to new version with line IDs.
 - Update Module::Install to 1.19 version.
 - Update author name.
 - Update copyright years to 2020.
 - Update to Map::Tube 3.41.

0.13 2015-10-16T12:36:19+02:00
 - Add tests for get_node_by_id() and get_node_by_name() methods.
 - Improve description for get_lines() in doc.
 - Update dependency to Map::Tube to 3.01.
 - Update to Map::Tube 3.06.

0.12 2015-09-27T18:50:03+02:00
 - Add example for print of metro lines to doc.
 - Move author tests to xt/ directory.
 - Update Module::Install to 1.16 version.

0.11 2015-04-06T23:22:54+02:00
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Add new stations to line A.
 - Rewrite SEE ALSO section to new style.

0.10 2015-03-15T23:22:25+01:00
 - Add Map::Tube::Text::Shortest to SEE ALSO section in doc.
 - Add test comment.
 - Rewrite to new 'other_link' attribute in Map::Tube 2.89.

0.09 2015-03-11T07:55:05+01:00
 - Fix test dependency (Test::Map::Tube).
 - Rewrite junctions in XML file to line stations with multiple names.

0.08 2015-03-10T07:41:45+01:00
 - Add Map::Tube::Plugin::FuzzyFind, Map::Tube::Glasgow,
   Map::Tube::KoelnBonn, Map::Tube::Lyon and Map::Tube::Singapore to SEE
   ALSO section in doc.
 - Add test of map validity.
 - Remove obsolete code from EXAMPLE2 section in doc.
 - Update README file.

0.07 2015-01-25T01:21:51+01:00
 - Add <?xml> header to XML document.
 - Add lines to XML document.